--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
   </head>
   <body>
     <div class="background">
+      <div class="header">
+        This page is under construction and will be live soon.
+      </div>
       <img class="background-image" src="adyuta-background-image.png">
     </div>
   </body>
