--- a/index.html
+++ b/index.html
@@ -4,20 +4,28 @@
     <style>
       .background{
         width: 100%;
-        height: auto;
+        height: 1000px;
+        background-image: url('adyuta-background-image.png');
+        background-position: top center;
+        background-size: contain;
+        background-repeat: no-repeat;
+        display:flex;
+        justify-content: center;
       }
-      .background-image{
-        width: 100%;
-        height: auto;
+      .header{
+        color: white;
+        width: 80%;
+        font-size: 3rem;
+        font-family: Arial;
+        padding-top: 5rem;
       }
     </style>
   </head>
   <body>
     <div class="background">
       <div class="header">
-        This page is under construction and will be live soon.
+        THIS PAGE IS UNDER CONSTRUCTION, COME BACK SOON!
       </div>
-      <img class="background-image" src="adyuta-background-image.png">
     </div>
   </body>
 </html>
